--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 
 # command to run before the tests
 before_script:
-  - "flake8 predominantmelodymakam"
+  - "flake8 pitchfilter"
 
 # command to run tests
 script:
