--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ before_script:
 
 # command to run tests
 script:
-#  - nosetests unittests
-  - nosetests --with-coverage
+  - nosetests unittests
+#  - nosetests --with-coverage
